# cohi_clustering

./: .gitignore  AGENTS.md  DEVELOP.rst  LICENSE  README.rst  pyproject.toml
cohi_clustering/: cli.py  data.py  layers.py  models.py  testing.py  utils.py  visualization.py
cohi_clustering/experiments/: _submit.py  contrastive_graphs.py  contrastive_graphs__zinc250.py  contrastive_images.py  generate_molecule_dataset.py  synthetic_molecules.py  test.ipynb
cohi_clustering/templates/: cluster_report.css.j2  cluster_report.html.j2
tests/: test_data.py  test_models.py  test_molecules.py  test_util.py  test_visualization.py
tests/artifacts/: README.md
