[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cohi_clustering"
version = "0.1.0"
description = "Contrastive Hierachical Clustering for Images and Graphs"
license = "MIT license"
readme = "README.rst"
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
maintainers = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"}
]
keywords = [
    "contrastive learning",
    "clustering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


# Project Dependencies
# ====================
requires-python = ">=3.8,<=3.12"
dependencies = [
    "numpy>=1.21.0,<2.0",
    "matplotlib>=3.4.0",
    "torch>=2.6.0,<2.8.0",
    "pytorch_lightning>=2.4.0,<2.8.0",
]

# Executable Scripts
# ==================

[project.scripts]
cmdata = "cohi_clustering.cli:cli"

# Configuration of Build System (Hatchling)
# =========================================

[tool.hatch.build]
skip-excluded-dirs=true

[tool.hatch.build.targets.wheel]
packages = ["chem_mat_data"]

# Version Bumping
# ===============

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    {filename = "pyproject.toml", search="version = \"{current_version}\"", replace="version = \"{new_version}\""},
    {filename = "README.rst"},
    {filename = "chem_mat_data/VERSION"},
]